# dify-official-plugins

datasources/sharepoint_21v_datasource/: PRIVACY.md  README.md  manifest.yaml  requirements.txt
models/azure_openai/: README.md  manifest.yaml  requirements.txt
models/deepseek/: manifest.yaml
models/gemini/: README.md  manifest.yaml  pyproject.toml  requirements.txt
models/gemini/models/llm/: _position.yaml  gemini-1.5-flash-002.yaml  gemini-1.5-flash.yaml  gemini-1.5-pro-002.yaml  gemini-1.5-pro-latest.yaml  gemini-1.5-pro.yaml  gemini-2.0-flash-lite-preview-02-05.yaml  gemini-2.0-flash-lite-preview.yaml  gemini-2.0-flash-thinking-exp-01-21.yaml  gemini-2.0-flash-thinking-exp-1219.yaml  gemini-2.5-flash-lite-preview-06-17.yaml  gemini-2.5-flash-preview-05-20.yaml  gemini-2.5-pro-preview-03-25.yaml  gemini-2.5-pro-preview-05-06.yaml  gemini-2.5-pro-preview-06-05.yaml  llm.py
models/gemini/models/text_embedding/: _position.yaml  gemini-embedding-001.yaml
models/gemini/readme/: README_ja_JP.md  README_zh_Hans.md
models/gmicloud/: PRIVACY.md  README.md  manifest.yaml  requirements.txt
models/groq/: manifest.yaml
models/huaweicloud_maas/: manifest.yaml
models/moonshot/: manifest.yaml
models/ollama/: manifest.yaml
models/openai_api_compatible/: manifest.yaml  pyproject.toml  requirements.txt
models/openai_api_compatible/models/rerank/: rerank.py
models/openai_api_compatible/readme/: README_ja_JP.md  README_zh_Hans.md
models/openrouter/: manifest.yaml
models/siliconflow/: manifest.yaml
models/vertex_ai/: manifest.yaml  requirements.txt
models/volcengine_maas/: manifest.yaml
models/x/: manifest.yaml
models/zhipuai/: manifest.yaml
tools/dingo/: manifest.yaml
tools/jiandaoyun/: README.md  manifest.yaml  requirements.txt
tools/mineru/: README.md  manifest.yaml
tools/nocodb/: manifest.yaml
tools/paddleocr_text_recognition/: README.md  manifest.yaml  requirements.txt
tools/salesforce/: PRIVACY.md  README.md  manifest.yaml  requirements.txt
tools/snowflake/: README.md  (+3 more)
(+110 files in other folders)
